INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR}  ${QT_QTNETWORK_INCLUDE_DIR} ${QT_QTXML_INCLUDE_DIR} ${QT_QTOPENGL_INCLUDE_DIR} )

QT4_GENERATE_MOC( ${CMAKE_CURRENT_SOURCE_DIR}/application.hpp ${CMAKE_CURRENT_SOURCE_DIR}/application.moc.cpp )
QT4_GENERATE_MOC( ${CMAKE_CURRENT_SOURCE_DIR}/FuncMode.hpp ${CMAKE_CURRENT_SOURCE_DIR}/FuncMode.moc.cpp )
QT4_GENERATE_MOC( ${CMAKE_CURRENT_SOURCE_DIR}/MainApp.hpp ${CMAKE_CURRENT_SOURCE_DIR}/MainApp.moc.cpp )
QT4_GENERATE_MOC( ${CMAKE_CURRENT_SOURCE_DIR}/Terminal.hpp ${CMAKE_CURRENT_SOURCE_DIR}/Terminal.moc.cpp )
QT4_GENERATE_MOC( ${CMAKE_CURRENT_SOURCE_DIR}/DumbTerminal.hpp ${CMAKE_CURRENT_SOURCE_DIR}/DumbTerminal.moc.cpp )
QT4_GENERATE_MOC( ${CMAKE_CURRENT_SOURCE_DIR}/DebugStream.hpp ${CMAKE_CURRENT_SOURCE_DIR}/DebugStream.moc.cpp )

QT4_ADD_RESOURCES( FreeMat_qrc ${CMAKE_CURRENT_SOURCE_DIR}/FreeMat.qrc  )

ADD_EXECUTABLE( FreeMat WIN32
${CMAKE_CURRENT_SOURCE_DIR}/application.moc.cpp 
application.cpp
${CMAKE_CURRENT_SOURCE_DIR}/FuncMode.moc.cpp 
FuncMode.cpp
FuncTerminal.cpp 
${CMAKE_CURRENT_SOURCE_DIR}/MainApp.moc.cpp
MainApp.cpp 
main.cpp 
${CMAKE_CURRENT_SOURCE_DIR}/DumbTerminal.moc.cpp
DumbTerminal.cpp 
${CMAKE_CURRENT_SOURCE_DIR}/Terminal.moc.cpp
DebugStream.cpp
${CMAKE_CURRENT_SOURCE_DIR}/DebugStream.moc.cpp
Terminal.cpp 
${FreeMat_qrc}
freemat.rc 
)

#${X86TARGET_OBJ}

#IF( MSVC )
#	SET( LAPACK_LIBRARY ${lapack} )
#ENDIF( MSVC )

IF( USE_DYNLINK )
	TARGET_LINK_LIBRARIES( FreeMat blas )
ENDIF( USE_DYNLINK )

TARGET_LINK_LIBRARIES( FreeMat 
Core 
FN 
Graphics 
FreeMatlib 
XP 
Mex
MatC
levmar
${QT_QTCORE_LIBRARY} 
${QT_QTGUI_LIBRARY} 
${QT_QTNETWORK_LIBRARY} 
${QT_QTOPENGL_LIBRARY} 
${QT_QTXML_LIBRARY} 
${QT_QTSVG_LIBRARY} 
${QT_QTMAIN_LIBRARY}
${OPENGL_LIBRARIES}
${G2C_LIBRARY}
${F2C_LIBRARY}
${EXTRA_LIBRARIES}
${OPTIONAL_LIBS}
${ARPACK_LIBRARY}
${LAPACK_LIBRARY}
${BLAS_LIBRARY}
)

#ADD_LLVM_LINK_LIBS(FreeMat "${LLVM_LIBS}" )

INSTALL(TARGETS FreeMat DESTINATION bin )
WRITE_OUT_ALL_VARIABLES()
