INCLUDE_DIRECTORIES( Include ../UFconfig ../AMD/Include Source)
INCLUDE( make_rules.cmake )
FILE(GLOB INST_H "Include/*.h")

IF(NOT MSVC)
	INSTALL( TARGETS umfpack ARCHIVE DESTINATION lib )
	INSTALL(FILES ${INST_H} DESTINATION include)
ELSE(NOT MSVC)
	INSTALL( TARGETS umfpack ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/bin )
	INSTALL(FILES ${INST_H} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
ENDIF(NOT MSVC)

