ADD_DEFINITIONS( ${QT_DEFINITIONS} ) 
INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR}  ${CMAKE_CURRENT_SOURCE_DIR}/../libFreeMat )

IF( USE_DYNLINK )
	ADD_DEFINITIONS( -DDYN_BLAS )
	ADD_LIBRARY( blas
	blas_wrap.cpp blas_dyn_link.cpp
	)
	GET_TARGET_PROPERTY(BLAS_LIBRARY blas LOCATION)
ENDIF( USE_DYNLINK )
ADD_SUBDIRECTORY( libBLAS_C ) 


